test/functions/iterators/multilocale/multilocRecIter.comm-none.lm-numa.good
multilocRecIter.chpl:1: error: 'yield' within 'on' not currently supported within recursive serial iterators
